z-index chat fix

--- a/week3/assets/styles/patterns/molecules/chats.less
+++ b/week3/assets/styles/patterns/molecules/chats.less
@@ -101,7 +101,7 @@ main + .chats {
 	left: 0;
 	display: none;
 
-	z-index: 2;
+	z-index: 3;
 
 	@media @q-sm-min {
 		top: auto;
